website completed with all changes and mvp

--- a/views/aboutUs.ejs
+++ b/views/aboutUs.ejs
@@ -38,7 +38,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<style>
 		@media screen and (min-width: 768px) {
 			.img-height {
-				height: 589px;
+				height: 375px;
 			}
 		}
 
@@ -69,13 +69,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div style="padding-top:10px;" class="about">
 		<h2 style="margin-bottom : 40px;" class="w3_agile_header">About Us</h2>
 		<div class="w3_agileits_contact_grids">
-			<div style="margin: 0px 20px;" class="col-md-5 w3_agileits_contact_grid_left">
-				<div class="agile_map">
+			<div style="margin: 0px 20px;" class="col-md-4 w3_agileits_contact_grid_left">
+				<div style="text-align: center;" class="agile_map">
 					<img class="img-height" src="http://localhost:3001/images/s5.png" alt="" />
-					<h1 style="margin-top: 20px; text-align: center;">Happy Shopping</h1>
+					<h1 style="margin: 25px; text-align: center;">Happy Shopping</h1>
 				</div>
 			</div>
-			<div style="padding: 20px;">
+			<div style="padding: 20px; padding-top: 0px;">
 				<u>AtoZ Online Mart</u><br>
 				Spare more with our organization. We give you the most minimal costs on the entirely of your grocery
 				needs.<br><br>
