--- a/views/login.ejs
+++ b/views/login.ejs
@@ -74,9 +74,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<form method="post" action="/login">
 					<input name="emailId" type="email" placeholder="Email Address" required=" ">
 					<input name="password" type="password" placeholder="Password" required=" ">
-					<div class="forgot">
+					<!-- <div class="forgot">
 						<a href="#">Forgot Password?</a>
-					</div>
+					</div> -->
 					<input style="border-radius: 10px;" type="submit" value="Login">
 				</form>
 			</div>
