--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -75,7 +75,7 @@
 				font-size: 20px;
 				margin: 10px 22px;
 			}
-		
+
 		}
 
 		@media screen and (max-width: 769px) {
@@ -84,7 +84,7 @@
 				font-size: 20px;
 				margin: 10px 0px;
 			}
-		
+
 		}
 
 		.down-arrow {
@@ -124,7 +124,7 @@
 <body>
 
 	<% include header %>
-	
+
 	<% if (session) { %>
 
 	<!-- breadcrumbs -->
@@ -133,7 +133,8 @@
 			<ol class="breadcrumb breadcrumb1 animated wow slideInLeft" data-wow-delay=".5s">
 				<li><a href="/"><span class="fa fa-home" aria-hidden="true"></span>Home</a></li>
 				<li class="active">Products</li>
-				<a style="float: right;" href="/logout"><span style="margin-right: 5px;" class="fa fa-power-off" aria-hidden="true"></span>Logout</a>
+				<a style="float: right;" href="/logout"><span style="margin-right: 5px;" class="fa fa-power-off"
+						aria-hidden="true"></span>Logout</a>
 			</ol>
 		</div>
 	</div>
@@ -145,8 +146,8 @@
 			<% if (message.length > 0) { %>
 			<div class="alert alert-success col-sm-12"><%= message %></div>
 			<% } %>
-			
-				
+
+
 			<div class="col-md-3 products-left">
 				<div class="categories">
 					<h2>Categories</h2>
@@ -176,7 +177,8 @@
 				</div>
 			</div>
 			<div class="scrollbar-product" class="col-md-9 products-right">
-				<% if(subCategoryId.length != 0) { %><h4 style="margin-bottom : 20px; margin-left: 5px;" class="w3_agile_header">
+				<% if(subCategoryId.length != 0) { %><h4 style="margin-bottom : 20px; margin-left: 5px;"
+					class="w3_agile_header">
 					<%= displaySubCategoryId%>
 				</h4> <% } %>
 
@@ -231,7 +233,8 @@
 							<form role="form" method="post"
 								action="/admin-subCategory-add/<%= categoryId %>/<%= subCategoryId %>/<%= editProduct.id%>"
 								enctype="multipart/form-data">
-								<td style="display: none;"><input type="text" value="<%= displaySubCategoryId %>" name="displaySubCategoryId" required></td>
+								<td style="display: none;"><input type="text" value="<%= displaySubCategoryId %>"
+										name="displaySubCategoryId" required></td>
 								<td><input type="file" accept="image/*" value="<%= editProduct.img %>" name="img"
 										required></td>
 								<td><input type="text" value="<%= editProduct.name %>" name="name" required></td>
@@ -350,11 +353,12 @@
 	</div>
 
 	<% } else { %>
-		<!-- <img src="" alt="not found"> -->
-		<div style="text-align: center;">
-			<img style="width: 65%; height: auto;" class="category-img" alt="not found" src="http://localhost:3001/images/403.jpg" />
-		</div>
-		<% } %>
+	<!-- <img src="" alt="not found"> -->
+	<div style="text-align: center;">
+		<img style="width: 65%; height: auto;" class="category-img" alt="not found"
+			src="http://localhost:3001/images/403.jpg" />
+	</div>
+	<% } %>
 
 	<!--- groceries --->
 	<% include footer %>
