website updated with new mysql dump for prod and minor changes

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -185,6 +185,24 @@
 								</div>
 
 								<% } %>
+								
+								<div class="col-md-3 top_brand_left">
+									<div class="agile_top_brand_left_grid card-body-category">
+										<div class="agile_top_brand_left_grid1">
+											<figure>
+												<div class="snipcart-item block">
+													<p class="commingSoonText">Coming Soon..</p>
+													<div style="text-align: center;" class="snipcart-thumb">
+														<img style="position: relative; opacity: 0.3;"
+															class="category-img" title=" " alt=" "
+															src="images/s2.png" />
+													</div>
+												</div>
+											</figure>
+										</div>
+									</div>
+									<p class="category-heading"></p>
+								</div>
 							</div>
 						</div>
 					</div>
