--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -85,14 +85,14 @@
 			<div class="col-md-3 w3_footer_grid">
 				<h3 class="category-position">Category</h3>
 				<ul class="info">
-					<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/user/cooking_oil_ghee">Cooking
+					<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/user/grocery/cookingoil_ghee">Cooking
 							Oils</a></li>
-					<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/user/dry_fruits">Dry Fruits</a>
+					<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/user/grocery/dry_fruits">Dry Fruits</a>
 					</li>
-					<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/user/pickles">Pickels</a></li>
+					<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/user/branded_foods/pickles">Pickels</a></li>
 					<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/user/upvaas_fast_special">Upvass
 							Special</a></li>
-					<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/user/deo_perfumes">Deo &
+					<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/user/personal_care/deo_perfumes">Deo &
 							Perfumes</a></li>
 					<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="#">Choclate & Candies</a></li>
 				</ul>
