--- a/views/header.ejs
+++ b/views/header.ejs
@@ -261,11 +261,11 @@
 								</div>
 							</ul>
 						</li> -->
-						<li><a href="/user/cooking_oils">Cooking Oils</a></li>
-						<li><a href="/user/dry_fruits">Dry Fruits</a></li>
-						<li><a href="/user/pickles">Pickles</a></li>
+						<li><a href="/user/grocery/cookingoil_ghee">Cooking Oils</a></li>
+						<li><a href="/user/grocery/dry_fruits">Dry Fruits</a></li>
+						<li><a href="/user/branded_foods/pickles">Pickles</a></li>
 						<li><a href="/user/upvaas_fast_special">Upvaas Special</a></li>
-						<li><a href="/user/deo_perfumes">Deo & Perfumes</a></li>
+						<li><a href="/user/personal_care/deo_perfumes">Deo & Perfumes</a></li>
 						<li><a href="#">Chocolate & Candies</a></li>
 						<li><a href="/user/disposable_items">Disposable Items</a></li>
 						<li><a href="/aboutUs">About Us</a></li>
