--- a/views/products.ejs
+++ b/views/products.ejs
@@ -43,7 +43,7 @@
 	<style>
 		.scrollbar-product {
 			overflow: auto;
-			height: 116vh;
+			height: 121vh;
 			border: 1px solid gray;
 			border-radius: 10px;
 		}
@@ -51,6 +51,7 @@
 		.product-image {
 			height: 180px;
 			width: 180px;
+			border-radius: 10px;
 		}
 
 		@media screen and (min-width: 768px) {
