--- a/views/index.ejs
+++ b/views/index.ejs
@@ -168,7 +168,7 @@
 							aria-labelledby="expeditions-tab">
 							<div class="agile_top_brands_grids">
 
-								<% for (let i = 0 ; i < productCategoryList.length ; i++) { %>
+								<% for (var i = 0 ; i < productCategoryList.length ; i++) { %>
 								<div class="col-md-3 top_brand_left">
 									<div class="agile_top_brand_left_grid card-body-category">
 										<div class="agile_top_brand_left_grid1">
