changing localhost to website domain name

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -4,7 +4,7 @@
 <head>
 	<title>Super Market an Ecommerce Online Shopping Category Flat Bootstrap Responsive Website Template | Contact ::
 		w3layouts</title>
-	<link rel="icon" href="http://localhost:80/images/logo.png">
+	<link rel="icon" href="http://www.atozonlinemart.com/images/logo.png">
 	<!-- for-mobile-apps -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -20,11 +20,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 	<!-- //font-awesome icons -->
 	<!-- js -->
-	<script src="http://localhost:80/js/jquery-1.11.1.min.js"></script>
+	<script src="http://www.atozonlinemart.com/js/jquery-1.11.1.min.js"></script>
 	<!-- //js -->
 	<!-- start-smoth-scrolling -->
-	<script type="text/javascript" src="http://localhost:80/js/move-top.js"></script>
-	<script type="text/javascript" src="http://localhost:80/js/easing.js"></script>
+	<script type="text/javascript" src="http://www.atozonlinemart.com/js/move-top.js"></script>
+	<script type="text/javascript" src="http://www.atozonlinemart.com/js/easing.js"></script>
 	<script type="text/javascript">
 		jQuery(document).ready(function ($) {
 			$(".scroll").click(function (event) {
@@ -91,7 +91,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<% include footer %>
 
 	<!-- Bootstrap Core JavaScript -->
-	<script src="http://localhost:80/js/bootstrap.min.js"></script>
+	<script src="http://www.atozonlinemart.com/js/bootstrap.min.js"></script>
 	<!-- top-header and slider -->
 	<!-- here stars scrolling icon -->
 	<script type="text/javascript">
@@ -100,11 +100,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		});
 	</script>
 	<!-- //here ends scrolling icon -->
-	<script src="http://localhost:80/js/minicart.min.js"></script>
+	<script src="http://www.atozonlinemart.com/js/minicart.min.js"></script>
 
 	<!-- main slider-banner -->
-	<script src="http://localhost:80/js/skdslider.min.js"></script>
-	<link href="http://localhost:80/css/skdslider.css" rel="stylesheet">
+	<script src="http://www.atozonlinemart.com/js/skdslider.min.js"></script>
+	<link href="http://www.atozonlinemart.com/css/skdslider.css" rel="stylesheet">
 	<script type="text/javascript">
 		jQuery(document).ready(function () {
 			jQuery('#demo1').skdslider({ 'delay': 5000, 'animationSpeed': 2000, 'showNextPrev': true, 'showPlayButton': true, 'autoSlide': true, 'animationType': 'fading' });
