--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
 <head>
 	<title>Super Market an Ecommerce Online Shopping Category Flat Bootstrap Responsive Website Template | Home ::
 		w3layouts</title>
-	<link rel="icon" href="http://localhost:80/images/logo.png">
+	<link rel="icon" href="http://www.atozonlinemart.com/images/logo.png">
 
 	<!-- for-mobile-apps -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,8 +15,8 @@
 		type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 
 	<!-- //for-mobile-apps -->
-	<link href="http://localhost:80/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
-	<link href="http://localhost:80/css/style.css" rel="stylesheet" type="text/css" media="all" />
+	<link href="http://www.atozonlinemart.com/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+	<link href="http://www.atozonlinemart.com/css/style.css" rel="stylesheet" type="text/css" media="all" />
 
 	<!-- font-awesome icons -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
@@ -25,12 +25,12 @@
 	<!-- //font-awesome icons -->
 
 	<!-- js -->
-	<script src="http://localhost:80/js/jquery-1.11.1.min.js"></script>
+	<script src="http://www.atozonlinemart.com/js/jquery-1.11.1.min.js"></script>
 	<!-- //js -->
 
 	<!-- start-smoth-scrolling -->
-	<script type="text/javascript" src="http://localhost:80/js/move-top.js"></script>
-	<script type="text/javascript" src="http://localhost:80/js/easing.js"></script>
+	<script type="text/javascript" src="http://www.atozonlinemart.com/js/move-top.js"></script>
+	<script type="text/javascript" src="http://www.atozonlinemart.com/js/easing.js"></script>
 	<script type="text/javascript">
 		jQuery(document).ready(function ($) {
 			$(".scroll").click(function (event) {
@@ -136,23 +136,23 @@
 	<!-- main-slider -->
 	<ul id="demo1">
 		<li>
-			<img src="http://localhost:80/images/s6.jpg" alt="" />
+			<img src="http://www.atozonlinemart.com/images/s6.jpg" alt="" />
 		</li>
 		<li>
-			<img src="http://localhost:80/images/s2.png" alt="" />
+			<img src="http://www.atozonlinemart.com/images/s2.png" alt="" />
 		</li>
 
 		<li>
-			<img src="http://localhost:80/images/s4.png" alt="" />
+			<img src="http://www.atozonlinemart.com/images/s4.png" alt="" />
 		</li>
 		<li>
-			<img src="http://localhost:80/images/s7.png" alt="" />
+			<img src="http://www.atozonlinemart.com/images/s7.png" alt="" />
 		</li>
 		<li>
-			<img src="http://localhost:80/images/s1.jpg" alt="" />
+			<img src="http://www.atozonlinemart.com/images/s1.jpg" alt="" />
 		</li>
 		<li>
-			<img src="http://localhost:80/images/s3.png" alt="" />
+			<img src="http://www.atozonlinemart.com/images/s3.png" alt="" />
 		</li>
 	</ul>
 	<!-- //main-slider -->
@@ -175,7 +175,7 @@
 											<figure>
 												<div class="snipcart-item block">
 													<div class="snipcart-thumb">
-														<a href="/user/<%= productCategoryList[i].name%>"><img class="category-img" title=" " alt="product Image" src="http://localhost:80/images/<%= productCategoryList[i].name%>.png" /></a>
+														<a href="/user/<%= productCategoryList[i].name%>"><img class="category-img" title=" " alt="product Image" src="http://www.atozonlinemart.com/images/<%= productCategoryList[i].name%>.png" /></a>
 													</div>
 												</div>
 											</figure>
@@ -215,7 +215,7 @@
 	<% include footer %>
 
 	<!-- Bootstrap Core JavaScript -->
-	<script src="http://localhost:80/js/bootstrap.min.js"></script>
+	<script src="http://www.atozonlinemart.com/js/bootstrap.min.js"></script>
 
 	<!-- top-header and slider -->
 	<!-- here stars scrolling icon -->
@@ -235,7 +235,7 @@
 		});
 	</script>
 	<!-- //here ends scrolling icon -->
-	<script src="http://localhost:80/js/minicart.min.js"></script>
+	<script src="http://www.atozonlinemart.com/js/minicart.min.js"></script>
 	<script>
 		// Mini Cart
 		paypal.minicart.render({
@@ -247,8 +247,8 @@
 		}
 	</script>
 	<!-- main slider-banner -->
-	<script src="http://localhost:80/js/skdslider.min.js"></script>
-	<link href="http://localhost:80/css/skdslider.css" rel="stylesheet">
+	<script src="http://www.atozonlinemart.com/js/skdslider.min.js"></script>
+	<link href="http://www.atozonlinemart.com/css/skdslider.css" rel="stylesheet">
 	<script type="text/javascript">
 		jQuery(document).ready(function () {
 			jQuery('#demo1').skdslider({ 'delay': 5000, 'animationSpeed': 2000, 'showNextPrev': true, 'showPlayButton': true, 'autoSlide': true, 'animationType': 'fading' });
