--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,7 +10,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <head>
 	<title>Super Market an Ecommerce Online Shopping Category Flat Bootstrap Responsive Website Template | Login ::
 		w3layouts</title>
-	<link rel="icon" href="http://localhost:80/images/logo.png">
+	<link rel="icon" href="http://www.atozonlinemart.com/images/logo.png">
 
 	<!-- for-mobile-apps -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,8 +21,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 
 	<!-- //for-mobile-apps -->
-	<link href="http://localhost:80/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
-	<link href="http://localhost:80/css/style.css" rel="stylesheet" type="text/css" media="all" />
+	<link href="http://www.atozonlinemart.com/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+	<link href="http://www.atozonlinemart.com/css/style.css" rel="stylesheet" type="text/css" media="all" />
 
 	<!-- font-awesome icons -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
@@ -31,12 +31,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- //font-awesome icons -->
 
 	<!-- js -->
-	<script src="http://localhost:80/js/jquery-1.11.1.min.js"></script>
+	<script src="http://www.atozonlinemart.com/js/jquery-1.11.1.min.js"></script>
 	<!-- //js -->
 
 	<!-- start-smoth-scrolling -->
-	<script type="text/javascript" src="http://localhost:80/js/move-top.js"></script>
-	<script type="text/javascript" src="http://localhost:80/js/easing.js"></script>
+	<script type="text/javascript" src="http://www.atozonlinemart.com/js/move-top.js"></script>
+	<script type="text/javascript" src="http://www.atozonlinemart.com/js/easing.js"></script>
 	<script type="text/javascript">
 		jQuery(document).ready(function ($) {
 			$(".scroll").click(function (event) {
@@ -85,7 +85,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- //login -->
 	<% include footer %>
 	<!-- Bootstrap Core JavaScript -->
-	<script src="http://localhost:80/js/bootstrap.min.js"></script>
+	<script src="http://www.atozonlinemart.com/js/bootstrap.min.js"></script>
 	<!-- top-header and slider -->
 	<!-- here stars scrolling icon -->
 	<script type="text/javascript">
@@ -104,7 +104,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		});
 	</script>
 	<!-- //here ends scrolling icon -->
-	<script src="http://localhost:80/js/minicart.min.js"></script>
+	<script src="http://www.atozonlinemart.com/js/minicart.min.js"></script>
 	<script>
 		// Mini Cart
 		paypal.minicart.render({
@@ -116,8 +116,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		}
 	</script>
 	<!-- main slider-banner -->
-	<script src="http://localhost:80/js/skdslider.min.js"></script>
-	<link href="http://localhost:80/css/skdslider.css" rel="stylesheet">
+	<script src="http://www.atozonlinemart.com/js/skdslider.min.js"></script>
+	<link href="http://www.atozonlinemart.com/css/skdslider.css" rel="stylesheet">
 	<script type="text/javascript">
 		jQuery(document).ready(function () {
 			jQuery('#demo1').skdslider({ 'delay': 5000, 'animationSpeed': 2000, 'showNextPrev': true, 'showPlayButton': true, 'autoSlide': true, 'animationType': 'fading' });
