--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -158,7 +158,7 @@
 								onclick="location.href='/admin-category/<%= productCategoryList[i].name%>'">
 								<%= productCategoryList[i].displayName%></div>
 							<% if(Object.keys(productCategoryList[i].subCategory).length > 0) { %>
-							<a style="display: inline; padding: 0px 10px; float: right;" href="#"><i
+							<a style="padding: 0px 10px; float: right;" href="#"><i
 									class="fa fa-angle-down" aria-hidden="true"></i></a>
 							<% } %>
 							<ul>
@@ -224,7 +224,7 @@
 								<td><input style="width: 75%;" type="number" value="<%= editProduct.actualPrice %>"
 										name="actualPrice" required></td>
 								<td><input style="width: 75%;" type="number" value="<%= editProduct.cuttingPrice %>"
-										name="cuttingPrice" required></td>
+										name="cuttingPrice"></td>
 								<td><input type="submit" value="Add/Update"></td>
 							</form>
 
@@ -241,7 +241,7 @@
 								<td><input style="width: 75%;" type="number" value="<%= editProduct.actualPrice %>"
 										name="actualPrice" required></td>
 								<td><input style="width: 75%;" type="number" value="<%= editProduct.cuttingPrice %>"
-										name="cuttingPrice" required></td>
+										name="cuttingPrice"></td>
 								<td><input type="submit" value="Add/Update"></td>
 							</form>
 							<% } %>
@@ -272,7 +272,7 @@
 
 								<td><input type="text" name="name" required></td>
 								<td><input style="width: 75%;" type="number" name="actualPrice" required></td>
-								<td><input style="width: 75%;" type="number" name="cuttingPrice" required></td>
+								<td><input style="width: 75%;" type="number" name="cuttingPrice"></td>
 								<td><input type="submit" value="Add/Update"></td>
 							</form>
 
@@ -287,7 +287,7 @@
 										name="displaySubCategoryId" required></td>
 								<td><input type="text" name="name" required></td>
 								<td><input style="width: 75%;" type="number" name="actualPrice" required></td>
-								<td><input style="width: 75%;" type="number" name="cuttingPrice" required></td>
+								<td><input style="width: 75%;" type="number" name="cuttingPrice"></td>
 								<td><input type="submit" value="Add/Update"></td>
 							</form>
 							<% } %>
