--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -58,11 +58,9 @@
 				<h3 class="category-position">Contact</h3>
 
 				<ul style="margin-bottom: 55px;" class="address">
-					<li><i class="fa fa-home"></i>Pramod Kumar Agrawal<br> <span>Shri Ram Provision Store, Lalaram</span> <span>marg, near Gurudwara,
-							Ghantaghar</span>
-						<span>Kosi kalan, Mathura-281403</span></li>
-					<li><a href="tel:9045056444"><i style="transform: rotate(90deg);" class="fas fa-phone"></i></a>+91 9045056444, 9219869825, <span>9997610265</span></li>
-					<li><i class="fab fa-whatsapp"></i>+91 9045056444, 9219869825<span>9997610265</span></li>
+					<li><i class="fa fa-home"></i>Pramod Kumar Agrawal (Kotwaniya)<br> <span style="margin-top: 10px; margin-left: 46px;">Shri Ram Provision Store Lalaram marg Near Gurudwara Ghantaghar Kosi Kalan Mathura-281403</span></li>
+					<li><a href="tel:9045056444"><i style="transform: rotate(90deg);" class="fas fa-phone"></i></a>+91 9045056444, 9219869825, <span style="margin-left: 46px;">9997610265</span></li>
+					<li><i class="fab fa-whatsapp"></i>+91 9045056444, 9219869825<span style="margin-left: 46px;">9997610265</span></li>
 					<!-- <li><a href="https://api.whatsapp.com/send?phone=919045056444"><i class="fab fa-whatsapp"></i></a>+91 9045056444, 9219869825<span>9997610265</span></li> -->
 					<li><i class="far fa-envelope"></i><a href="mailto:atozonlinemart5@gmail.com">atozonlinemart5@gmail.com</a></li>
 				</ul>
