--- a/views/header.ejs
+++ b/views/header.ejs
@@ -184,8 +184,8 @@
 		<div class="w3ls_logo_products_left1 icon-position-contact">
 			<ul style="margin-top: -33px;" class="phone_email">
 				<li>For Order Call or Whatsapp us at :</li><br>
-				<!-- <li style="margin-left: -26px;"><a href="tel:9045056444"><span class="contact-icon-position"><i style="transform: rotate(116deg);" class="fas fa-phone"></i></span></a><span class="contact-icon-position"><i class="fab fa-whatsapp"></i></span>+91 9045056444, 9219869825</li> -->
-				<li style="margin-left: -26px;"><a href="tel:9045056444"><span class="contact-icon-position"><i style="transform: rotate(116deg);" class="fas fa-phone"></i></span></a><a href="https://api.whatsapp.com/send?phone=918630422423"><span class="contact-icon-position"><i class="fab fa-whatsapp"></i></span></a>+91 9045056444, 9219869825</li>
+				<li style="margin-left: -26px;"><a href="tel:9045056444"><span class="contact-icon-position"><i style="transform: rotate(116deg);" class="fas fa-phone"></i></span></a><span class="contact-icon-position"><i class="fab fa-whatsapp"></i></span>+91 9045056444, 9219869825</li>
+				<!-- <li style="margin-left: -26px;"><a href="tel:9045056444"><span class="contact-icon-position"><i style="transform: rotate(116deg);" class="fas fa-phone"></i></span></a><a href="https://api.whatsapp.com/send?phone=918630422423"><span class="contact-icon-position"><i class="fab fa-whatsapp"></i></span></a>+91 9045056444, 9219869825</li> -->
 			</ul>
 		</div>
 		<div style="margin-bottom:10px;" class="w3ls_logo_products_left">
