sliding photo and bug fix

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -33,6 +33,13 @@
 		}
 	}
 
+	.minimum-order{
+		color: #A8A8A8; 
+		position: absolute; 
+		bottom: -25%; 
+		margin: 0px !important;
+	}
+
 	.category-position {
 			text-transform: none !important;;
 		}
@@ -60,8 +67,7 @@
 				<ul style="margin-bottom: 55px;" class="address">
 					<li><i class="fa fa-home"></i>Pramod Kumar Agrawal (Kotwaniya)<br> <span style="margin-top: 10px; margin-left: 46px;">Shri Ram Provision Store Lalaram marg Near Gurudwara Ghantaghar Kosi Kalan Mathura-281403</span></li>
 					<li><a href="tel:9045056444"><i style="transform: rotate(90deg);" class="fas fa-phone"></i></a>+91 9045056444, 9219869825, <span style="margin-left: 46px;">9997610265</span></li>
-					<li><i class="fab fa-whatsapp"></i>+91 9045056444, 9219869825<span style="margin-left: 46px;">9997610265</span></li>
-					<!-- <li><a href="https://api.whatsapp.com/send?phone=919045056444"><i class="fab fa-whatsapp"></i></a>+91 9045056444, 9219869825<span>9997610265</span></li> -->
+					<li><a href="https://api.whatsapp.com/send?phone=919045056444"><i class="fab fa-whatsapp"></i></a>+91 9045056444, 9219869825<span>9997610265</span></li>
 					<li><i class="far fa-envelope"></i><a href="mailto:atozonlinemart5@gmail.com">atozonlinemart5@gmail.com</a></li>
 				</ul>
 			</div>
@@ -103,8 +109,9 @@
 							Special</a></li>
 					<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/user/personal_care/deo_perfumes">Deo &
 							Perfumes</a></li>
-					<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="#">Choclate & Candies</a></li>
+					<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="#">Chocolate & Candies</a></li>
 				</ul>
+				<p class="minimum-order">*Minimum order value is ₹149</p>
 			</div>
 			<div class="col-md-3 w3_footer_grid">
 				<ul class="info ul-category">
@@ -116,7 +123,6 @@
 					<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="#">Spices</a></li>
 					<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="#">Namkeen & Papad</a></li>
 				</ul>
-
 			</div>
 			<div class="clearfix"> </div>
 		</div>
