--- a/views/index.ejs
+++ b/views/index.ejs
@@ -64,7 +64,7 @@
 			.commingSoonText {
 				position: absolute;
 				transform: translate(25%);
-				top: 25%;
+				top: 40%;
 				left: 0%;
 				font-size: 30px !important;
 				color: #FE9126 !important;
@@ -106,8 +106,8 @@
 			.commingSoonText {
 				position: absolute;
 				transform: translate(25%);
-				top: 25%;
-				left: 9%;
+				top: 40%;
+				left: 7%;
 				font-size: 23px !important;
 				color: #FE9126 !important;
 				z-index: 10;
@@ -136,23 +136,26 @@
 	<!-- main-slider -->
 	<ul id="demo1">
 		<li>
-			<img src="http://www.atozonlinemart.com/images/s6.jpg" alt="" />
+			<img src="/images/s1.jpg" alt="" />
 		</li>
 		<li>
-			<img src="http://www.atozonlinemart.com/images/s2.png" alt="" />
+			<img src="/images/s2.jpg" alt="" />
 		</li>
 
 		<li>
-			<img src="http://www.atozonlinemart.com/images/s4.png" alt="" />
+			<img src="/images/s3.jpg" alt="" />
 		</li>
 		<li>
-			<img src="http://www.atozonlinemart.com/images/s7.png" alt="" />
+			<img src="/images/s4.jpg" alt="" />
 		</li>
 		<li>
-			<img src="http://www.atozonlinemart.com/images/s1.jpg" alt="" />
+			<img src="/images/s5.png" alt="" />
 		</li>
 		<li>
-			<img src="http://www.atozonlinemart.com/images/s3.png" alt="" />
+			<img src="/images/s6.jpg" alt="" />
+		</li>
+		<li>
+			<img src="/images/s7.jpg" alt="" />
 		</li>
 	</ul>
 	<!-- //main-slider -->
@@ -195,7 +198,7 @@
 													<div style="text-align: center;" class="snipcart-thumb">
 														<img style="position: relative; opacity: 0.3;"
 															class="category-img" title=" " alt=" "
-															src="images/s2.png" />
+															src="images/comingsoon.png" />
 													</div>
 												</div>
 											</figure>
