--- a/views/index.ejs
+++ b/views/index.ejs
@@ -136,26 +136,26 @@
 	<!-- main-slider -->
 	<ul id="demo1">
 		<li>
-			<img src="/images/s1.jpg" alt="" />
+			<img src="http://www.atozonlinemart.com/images/s1.jpg" alt="" />
 		</li>
 		<li>
-			<img src="/images/s2.jpg" alt="" />
+			<img src="http://www.atozonlinemart.com/images/s2.jpg" alt="" />
 		</li>
 
 		<li>
-			<img src="/images/s3.jpg" alt="" />
+			<img src="http://www.atozonlinemart.com/images/s3.jpg" alt="" />
 		</li>
 		<li>
-			<img src="/images/s4.jpg" alt="" />
+			<img src="http://www.atozonlinemart.com/images/s4.jpg" alt="" />
 		</li>
 		<li>
-			<img src="/images/s5.png" alt="" />
+			<img src="http://www.atozonlinemart.com/images/s5.png" alt="" />
 		</li>
 		<li>
-			<img src="/images/s6.jpg" alt="" />
+			<img src="http://www.atozonlinemart.com/images/s6.jpg" alt="" />
 		</li>
 		<li>
-			<img src="/images/s7.jpg" alt="" />
+			<img src="http://www.atozonlinemart.com/images/s7.jpg" alt="" />
 		</li>
 	</ul>
 	<!-- //main-slider -->
