about photo change

--- a/views/aboutUs.ejs
+++ b/views/aboutUs.ejs
@@ -71,7 +71,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="w3_agileits_contact_grids">
 			<div style="margin: 0px 20px;" class="col-md-4 w3_agileits_contact_grid_left">
 				<div style="text-align: center;" class="agile_map">
-					<img class="img-height" src="http://www.atozonlinemart.com/images/s5.png" alt="" />
+					<img class="img-height" src="http://www.atozonlinemart.com/images/about.png" alt="" />
 					<h1 style="margin: 25px; text-align: center;">Happy Shopping</h1>
 				</div>
 			</div>
