mobile view minimum line

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -19,6 +19,13 @@
 			left: 10%;
 			top: 75%;
 		}
+		
+		.minimum-order{
+		color: #A8A8A8; 
+		position: absolute; 
+		bottom: -25%; 
+		margin: 0px !important;
+	}
 	}
 
 	@media screen and (max-width: 769px) {
@@ -31,13 +38,13 @@
 			left: 16%;
 			top: 33%;
 		}
-	}
 
-	.minimum-order{
+		.minimum-order{
 		color: #A8A8A8; 
 		position: absolute; 
-		bottom: -25%; 
+		bottom: -82%; 
 		margin: 0px !important;
+	}
 	}
 
 	.category-position {
@@ -123,6 +130,7 @@
 					<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="#">Spices</a></li>
 					<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="#">Namkeen & Papad</a></li>
 				</ul>
+				<br>
 			</div>
 			<div class="clearfix"> </div>
 		</div>
